2003-11-11  Theodore A. Roth  <troth@openavr.org>

	* avr-libc.spec.in: Allow disabling build of docs sub-package with 
	"--without docs".

2003-11-11  Theodore A. Roth  <troth@openavr.org>

	* include/avr/crc16.h: Use inttypes.h defined types to allow use
	with -mint8.
	* include/avr/delay.h: Ditto.
	[Submitted by Tomas Vanek <vanekt@fbl.cz>]

2003-11-11  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Set version to 1.0.1.20031111.
	* NEWS: Add note about new crc function.
	Add note about port pin changes and warn mega162 users about PE0 and
	PE1 changing again.
	* include/avr/crc16.h (_crc16_update): Add dox.
	(_crc_xmodem_update): New function.

2003-11-04  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* libc/pmstring/strlcat_P.S: Use correct dox group (fix for bug #6359).
	* libc/pmstring/strlcpy_P.S: Use correct dox group (fix for bug #6359).

2003-10-20  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iom128.h:
	* include/avr/portpins.h:
	Move generic PORTn, DDn and PINn defs to portpins.h.

2003-10-20  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Set version to 1.0.1.20031020.
	* include/avr/io.h: Include portpins.h.
	* include/avr/portpins.h: New file.
	* include/avr/ioat94k.h: Convert PORTxn to Pxn.
	* include/avr/iom128.h: Convert PORTxn to Pxn.
	* include/avr/iom162.h: Convert PORTxn to Pxn.
	* include/avr/iom64.h: Convert PORTxn to Pxn.
	* include/avr/iotn15.h: Convert PORTxn to Pxn.

2003-10-19  Theodore A. Roth  <troth@openavr.org>

	Released avr-libc-1.0.1.

2003-10-19  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Set version to 1.0.1.

2003-10-18  Theodore A. Roth  <troth@openavr.org>
[Fix for Bug #5976]

	* configure.in (AM_INIT_AUTOMAKE): Set version to 1.0.0.20031018.
	* NEWS: Add note warning mega162 users about fix for bug #5799.
	* doc/api/faq.dox: Use pgm_read_byte() instead of __lpm_inline() in the